--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -46,7 +46,7 @@ jobs:
         run: npm install
       - name: Run Code Coverage
         continue-on-error: true
-        run: npm run code-coverage
+        run: npm run coverage
       - name: Upload Code Coverage Result
         uses: actions/upload-artifact@v3
         with:
