--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -57,6 +57,8 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     needs: [unit-testing , code-coverage]
+    permissions: 
+      packages: write
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -71,4 +73,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/solar-system:${{github.sha}}
+          tags: ghcr.io/hrushikeshgowda/solar-system:${{github.sha}}
