--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -16,13 +16,15 @@ jobs:
   unit-testing:
     name: Unit Testing
     runs-on: ubuntu-latest
+    container: 
+      image: node:20
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-      - name: Setup NodeJS Version
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
+      # - name: Setup NodeJS Version
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 20
       - name: Cache NPM dependencies
         uses: actions/cache@v3
         with:
@@ -33,11 +35,12 @@ jobs:
       - name: Unit Testing
         run: npm test
       - name: Archive Test Result
-        if: always() #added
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: Mocha-Test-Result
           path: test-results.xml
+
   code-coverage:
     runs-on: ubuntu-latest
     steps:
