--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -77,3 +77,24 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/hrushikeshgowda/solar-system:${{github.sha}}
+
+  dev-deploy:
+    runs-on: ubuntu-latest
+    needs: docker
+    environment: 
+      name: development
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      - name: Setup Kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: v1.26.0
+      - name: Set Context
+        uses: azure/k8s-set-context@v3
+        with:
+          method: kubeconfig
+          kubeconfig: ${{ secrets.KUBE_CONFIG }}
+      - name: Verify Kubectl
+        run: kubectl version --short -o yaml
+      
